Fixed spacing, improved project badge

--- a/site.css
+++ b/site.css
@@ -3,14 +3,31 @@ table, td, th {
     text-align: left;
   }
   
-  table {
+table {
     border-collapse: collapse;
     width: 100%;
-  }
+}
   
-  th, td {
+th, td {
     padding: 15px;
-  }
+}
 
-  
+.project-badge {
+    background: rgb(88, 88, 180);
+    height: 45px;
+    width: 180px;
+    border-radius: 12px 6px 12px 6px;
+    color: #fff;
+    padding: 12px 20px 5px 20px;
+    margin:auto;
+    cursor: pointer;
+}
+
+.project-badge > span {
+    font-size: 20px;
+    vertical-align: middle;
+    display: inline-block;
+}
+
+
   
